<resources>
    <string name="app_name">RunnerCreator</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ability_picker">AbilityPicker</string>
    <string name="action_settings">Settings</string>
    <string name="deleteCharacter">Löschen</string>
    <string name="killCharacter">töten</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_priorityitem_list">PriorityItems</string>
    <string name="title_priorityitem_detail">PriorityItem Detail</string>


    <!-- //Character\\ -->
    <string name="name">Name</string>
    <string name="streetName">Straßenname</string>
    <string name="archtype">Archetyp</string>
    <string name="sex">Geschlecht</string>
    <string name="age">Alter</string>
    <string name="size">Größe:</string>
    <string name="weight">Gewicht:</string>
    <string name="ethnicity">Ethnie:</string>
    <string name="sizeCreation">Größe (cm)</string>
    <string name="weightCreation">Gewicht (kg)</string>
    <string name="ethnicityCreation">Ethnie</string>
    <string name="background">Beschreibung/Hintergrund</string>
    <!-- //END Character\\ -->

    <string name="btnFinish">Fertig</string>
    <string name="btnContinue">Weiter</string>
    <string name="btnFinishChar">Charaktererstellung abschließen</string>

    <string name="attributepoints">Fertigkeitenpunkte:</string>
    <string name="skillpoints">Skillpunkte:</string>
    <string name="specialAttributepoints">Spezial Attributpunkte:</string>
    <string name="connectionpoints">Punkte:</string>
    <string name="loyalty">Loaylität</string>
    <string name="influence">Einfluss</string>
    <string name="packetpoints">Paketpunkte:</string>
    <string name="title_activity_qualities">Qualities</string>
    <string name="title_activity_character_selection_portrait_test">title_activity_character_selection_portrait_test</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="magicuser_choose_intro">Bei Shadowrun gibt es vier verschiedene Arten von Magieanwendern:
            Adepten, Aspektzauberer, Zauberer und Magieradepten. Es
            folgt eine kurze Zusammenfassung der Merkmale jeder Gruppe.
            Der Spieler sollte diese Merkmale sorgfältig abwägen, bevor er
            sich für eine bestimmte Art von Magieanwender entscheidet.</string>

</resources>
