<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent">

                <EditText
                    android:id="@+id/editTextBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/background" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout9"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout10">

                <EditText
                    android:id="@+id/editTextEthnicity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ethnicity" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout8"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout9">

                <EditText
                    android:id="@+id/editTextWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout7"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout8">

                <EditText
                    android:id="@+id/editTextSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/size" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout7"
                tools:layout_editor_absoluteY="236dp">

                <EditText
                    android:id="@+id/editTextAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout5">

                <EditText
                    android:id="@+id/editTextSex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sex" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageViewCharacter"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout4">

                <EditText
                    android:id="@+id/editTextArchtype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/archtype" />
            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/imageViewCharacter"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:longClickable="true"
                android:onClick="testButtonClick"
                android:scaleType="fitCenter"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/btn_dialog" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editTextStreetName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toRightOf="@+id/imageViewCharacter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/editTextStreetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/streetName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toRightOf="@+id/imageViewCharacter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:id="@+id/textInputLayout2">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="hint"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout10"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
