<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppBackgroudImage"
    tools:context="com.example.danielojea.srapp.charactercreation.SkillSelection">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/AddConnectionBtn"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:onClick="AddConnection"
        app:backgroundTint="@android:color/holo_green_light"
        app:elevation="5dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91"
        app:srcCompat="@drawable/shadowrunapp_plus" />

    <Button
        android:id="@+id/weiterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="startNextActivity"
        android:text="@string/btnContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/connectionPointCounter"
        android:layout_width="123dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/connectionpoints"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/connectionList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/LoayaltyHeader"
        android:layout_width="92dp"
        android:layout_height="34dp"
        android:layout_marginRight="8dp"
        android:text="@string/loyalty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/connectionList"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/InfluenceHeader"
        android:layout_width="94dp"
        android:layout_height="33dp"
        android:layout_marginRight="0dp"
        android:text="@string/influence"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/connectionList"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/LoayaltyHeader"
        android:layout_marginLeft="8dp" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/divider_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/KnowledgeSkillpointCounter" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/connectionList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/fragment_connection_points_distribute"
        android:layout_marginLeft="0dp" />
</android.support.constraint.ConstraintLayout>